<resources xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Kindroid Security</string>
	<string name="title_enabled">FireWall</string>
	<string name="title_disabled">FireWall (Firewall disabled)</string>
	<string name="showrules">Show rules</string>
	<string name="applyrules">Apply rules</string>
	<string name="saverules">Save rules</string>
	<string name="purgerules">Purge rules</string>
	<string name="setpwd">Set password</string>
	<string name="help">Help</string>
	<string name="close">Close</string>
	<string name="fw_enabled">Firewall is ON</string>
	<string name="fw_disabled">Firewall is OFF</string>
	<string name="log_enabled">Log is enabled</string>
	<string name="log_disabled">Log is disabled</string>
	<string name="show_log">Show log</string>
	<string name="clear_log">Clear log</string>
	<string name="pass_titleset">Set password lock</string>
	<string name="pass_titleget">Password required</string>
	<string name="appLoading">Loading...</string>
	<string name="appRefresh">Refresh</string>
	<string name="appWhatsNew">What\'s new?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="helpTitle">Help</string>
	<string name="helpClose">Close</string>
	<string name="aboutTitle">About</string>
	<string name="aboutDonation">Donate</string>
	<string name="aboutClose">Close</string>
	<string name="aboutHomepage">Homepage</string>
	<string name="exportTitle">Export to .csv</string>
	<string name="exportSummary">Export all data to a .csv file on the SD card</string>
	<string name="exportSuccessful">Export to %1$s successful</string>
	<string name="exportFailed">Export failed</string>
	<string name="exportDialogTitle">Exporting...</string>
	<string name="exportDialogText">Please wait while exporting data</string>
	<string name="permissionRequired">Could not acquire root access.\n You need a rooted
		phone to run KindroidSecurity.\n\nIf this phone is already rooted,
		please make sure KindroidSecurity has enough permissions to execute
		the su command.\n
		Error message:</string>
	<string name="importTitle">Import from .csv</string>
	<string name="importSummary">Import data from .csv files on the SD card</string>
	<string name="importSuccessful">Import successful</string>
	<string name="importFailed">Import failed</string>
	<string name="importDialogTitle">Importing...</string>
	<string name="importDialogText">Please wait while importing data</string>
	<string name="importAlertText">Are you sure that you want to import the data to
		the SD card?</string>
	<string name="interfaceTypeCell">Cell</string>
	<string name="interfaceTypeWifi">Wi-Fi</string>
	<string name="interfaceTypeBluetooth">Bluetooth</string>
	<string name="menuInterfaceTitle">Interface</string>
	<string name="menuInterfaceAdd">Add a counter</string>
	<string name="menuInterfaceAddDone">New counter added</string>
	<string name="menuInterfaceReset">Reset all</string>
	<string name="menuInterfaceResetDone">Reset done</string>
	<string name="menuInterfaceGraph">Show graph</string>
	<string name="dialogInterfaceResetTitle">Reset all</string>
	<string name="dialogInterfaceResetText">Are you sure?</string>
	<string name="menuCounterTitle">Counter</string>
	<string name="menuCounterChange">Change counter type</string>
	<string name="menuCounterChangeDone">Counter type changed</string>
	<string name="menuCounterRemove">Remove counter</string>
	<string name="menuCounterRemoveDone">Counter removed</string>
	<string name="menuCounterStartDate">Set start date</string>
	<string name="menuCounterStartDay">Set start day</string>
	<string name="menuCounterSetDuration">Set duration</string>
	<string name="menuCounterSetAlert">Set data alert</string>
	<string name="dialogCounterTypeTitle">Select counter type</string>
	<string name="dialogCounterDurationTitle">Select counter duration</string>
	<string name="dialogCounterMonthlyTitle">Select the reset date</string>
	<string name="dialogCounterMonthlyChanged">Date changed</string>
	<string name="dialogCounterWeeklyTitle">Select the reset day</string>
	<string name="dialogCounterWeeklyChanged">Day changed</string>
	<string name="dialogCounterLimitTitle">Set notification value</string>
	<string name="dialogCounterLimitText">Set the notification limit. To disable
		notification, just erase the value or set it to 0.</string>
	<string name="dialogCounterLimitWrong">Wrong number format</string>
	<string name="dialogDetailsStartDate">Start date:</string>
	<string name="dialogDetailsEndDate">End date:</string>
	<string name="dialogDetailsReceived">Received:</string>
	<string name="dialogDetailsSent">Sent:</string>
	<string name="dialogDetailsTotal">Total:</string>
	<string name="dialogDetailsAlert">Alert:</string>
	<string name="dialogDetailsByte">%1$s (%2$s%%)</string>
	<string name="dialogDetailsNoAlert">no alert defined</string>
	<string name="notifyExceed">%1$s exceeds the limit of %2$s %3$s</string>
	<string name="notifyExceedTitle">%1$s exceeds the defined limit</string>
	<string name="preferences">Preferences</string>
	<string name="prefsCategoryAdvancedTitle">Advanced preferences</string>
	<string name="prefsCatImportExportTitle">Import/Export</string>
	<string name="prefsCatImportExportSummary">Import and export data to and from the SD card</string>
	<string name="prefsWifiUpdateTitle">WiFi slow update rate</string>
	<string name="prefsWifiUpdateSummaryOn">Update every hour. Require less power but less
		accurate</string>
	<string name="prefsWifiUpdateSummaryOff">Update every 30 seconds. Require more power but
		more accurate</string>
	<string name="prefsDebugTitle">Debug</string>
	<string name="prefsDebugSummary">Show debug information in the notification area</string>
	<string name="graphReceivedLabel">Received</string>
	<string name="graphSentLabel">Sent</string>
	<string name="graphYTitle">kBytes</string>
	<string name="proc_close">Kill Processes</string>
	<string name="app_summary_health_report">Summary</string>
	<string name="app_summary_memory_title">Memory</string>
	<string name="app_summary_network_title">GPRS</string>
	<string name="app_summary_had_used_percent">%s Used</string>
	<string name="app_summary_health_score">%d Scores</string>
	<string name="app_summary_health_used_m_byte">%dM Used</string>
	<string name="app_summary_health_leave_m_byte">%dM Free</string>
	<string name="app_summary_one_key_optimize">Optimize</string>
	<string name="app_summary_settings">Setting</string>
	<string name="app_firewall_disable">OFF</string>
	<string name="app_firewall_enable">ON</string>
	<string name="app_firewall_save_rule">Save Rules</string>
	<string name="app_firewall_status_enable">Firewall is ON</string>
	<string name="app_firewall_status_diable">Firewall is OFF</string>
	<string name="scan_pause">Pause</string>
	<string name="scanningText">Scanning...</string>
	<string name="scanningDone">Scanning is done!</string>
	<string name="scan_norisk">No Risk</string>
	<string name="scan_warn">Warning</string>
	<string name="scan_risk">Risk</string>
	<string name="scan_danger">Danger</string>
	<string name="app_uninst">Uninstall</string>
	<string name="risk_warning">Signed with Google test certification</string>
	<string name="no_risk">No risk found</string>
	<string name="app_rescan">Rescan</string>
	<string name="scan_continue">Resume</string>
	<string name="working">Loading...</string>
	<string name="reading">Reading installed applications</string>
	<string name="health_closeprocess">Close processes</string>
	<string name="health_closecount">
	</string>
	<string name="health_memrelease">Release Memory</string>
	<string name="health_memcount">M</string>
	<string name="package_name">net.kindroid.security</string>
	<string name="introduction">[Introduction]</string>
	<string name="permission_des">[Permission description]</string>
	<string name="version">Version:</string>
	<string name="size">Size:</string>
	<string name="save_level">Security level:</string>
	<string name="please_dont_uni_selft">Dont uninstall self</string>
	<string name="mobile_traffic">Mobile traffic</string>
	<string name="begin_date">Begin date</string>
	<string name="mobile_traffic_limit_per_month">Mobile traffic limit per month</string>
	<string name="mobile_traffic_left_per_month">Mobile traffic left per month</string>
	<string name="cal_date">Balance date</string>
	<string name="clear_count_data">Clear count data</string>
	<string name="update_virus">Update</string>
	<string name="update_virus_no_new_version_text">Up to date!</string>
	<string name="update_virus_has_new_version_text">There is new virus definitions available, update it
		now?</string>
	<string name="day">
	</string>
	<string name="checking_update">Checking update....</string>
	<string name="updating">Updating....</string>
	<string name="advice_tips">Too many processes are running, click to optimize!</string>
	<string name="advice_tips_better">Current system is healthy, please keep</string>
	<string name="advice_tips_bad">There are security risks in current system, please
		optimize it!</string>
	<string name="setting_cal_date">Settlement Day</string>
	<string name="sure">OK</string>
	<string name="message_connot_null">Must not be empty!</string>
	<string name="message_connot_bezero">Input should greater than 0</string>
	<string name="softmanage_prompt_dialog_title">Kindroid Security Notice</string>
	<string name="backup_prompt_dialog_tip_text">Reminder: Will consume a little network traffic to
		back up on server.</string>
	<string name="backup_contacts_select_text">To backup your data to cloud server or local?</string>
	<string name="bakcup_prompt_dialog_button_remote">Network</string>
	<string name="bakcup_prompt_dialog_button_local">Local</string>
	<string name="backup_login_prompt_text">Please enter your username and password</string>
	<string name="backup_login_user_name_text">Name：</string>
	<string name="backup_login_password_text">Password：</string>
	<string name="backup_login_text">Login</string>
	<string name="backup_register_text">Register</string>
	<string name="backup_forget_password_test">Forgot password</string>
	<string name="email">Email：</string>
	<string name="backup_log_back_succ_text">Backup succeed：</string>
	<string name="backup_log_contacts_text">Contact</string>
	<string name="backup_log_ntraf_text">Network traffic：</string>
	<string name="input_name_passwd">Step 1, enter user ID and password</string>
	<string name="sure_filldate_message">Step 3, confirm the information</string>
	<string name="setup_login_find_passwd">To get back your password, please press\u0020</string>
	<string name="register_account">Register</string>
	<string name="next_step">Next</string>
	<string name="sure_enable_remote_security">Click “finish” to enable anti-theft!</string>
	<string name="step_over_promote">3、If you forget all the information above
		mentioned, please leave your e-mail address and all of the information
		would be sent to you. (optional)</string>
	<string name="setting_over">Finish</string>
	<string name="security_audit_privacy">Privacy</string>
	<string name="security_audit_cost">Chargeback</string>
	<string name="security_audit_gps">GPS</string>
	<string name="security_audit_network">Network</string>
	<string name="installed_icon_desp_menu">Icon Description</string>
	<string name="installed_icon_desp_privacy">This process will access to your personal
		information. Such as, read contacts data, update content on SD card
		and so on.</string>
	<string name="installed_icon_desp_charge">This process requires sending SMS, directly dial
		the number.</string>
	<string name="installed_icon_desp_gps">This process will get your position, such as
		(internet based) general location, accurate (GPS) location.</string>
	<string name="installed_icon_desp_network">This process needs internet support or fully
		internet access.</string>
</resources>