<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">




	<TextView android:layout_marginTop="10dip" android:singleLine="true"
		android:textColor="@color/light_black" android:paddingLeft="5dip"
		android:text="@string/input_name_passwd" android:textSize="18dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>








	<LinearLayout android:layout_width="match_parent"
		android:paddingLeft="8dip" android:paddingRight="8dip"
		android:gravity="center_vertical" android:layout_height="wrap_content"
		android:layout_marginTop="25dp">
		<TextView android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:layout_weight="2.9"
			android:singleLine="true" android:layout_width="fill_parent"
			android:text="@string/backup_login_user_name_text" android:textColor="@color/black"></TextView>
		<EditText android:lines="1" android:layout_height="wrap_content"
			android:singleLine="true" android:layout_width="fill_parent"
			android:layout_weight="1" android:id="@+id/user_name_input"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:paddingLeft="8dip" android:paddingRight="8dip"
		android:gravity="center_vertical" android:layout_height="wrap_content"
		android:layout_marginTop="10dp">
		<TextView android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:layout_weight="2.9"
			android:singleLine="true" android:layout_width="fill_parent"
			android:textColor="@color/black" android:text="@string/backup_login_password_text"></TextView>
		<EditText android:lines="1" android:layout_height="wrap_content"
			android:singleLine="true" android:layout_width="fill_parent"
			android:layout_weight="1" android:id="@+id/password_input"
			android:password="true"></EditText>
	</LinearLayout>

	<View android:layout_width="match_parent" android:background="@drawable/virus_scan_line01"
		android:layout_height="1dp" android:layout_marginTop="18dip"></View>



	<LinearLayout android:layout_width="fill_parent"
		android:gravity="center_horizontal"
		android:layout_height="wrap_content" android:paddingTop="5dip">
		<TextView android:text="@string/setup_login_find_passwd"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:id="@+id/find_pwd_tv"
		android:text="@string/setup_login_find_passwd"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

	</LinearLayout>



	<LinearLayout android:layout_width="fill_parent"
		android:paddingTop="15dip" android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<Button android:text="@string/register_account" android:id="@+id/register_account_bt"
			android:singleLine="true" android:paddingTop="5dip"
			android:paddingBottom="5dip" android:textColor="@color/white"
			android:layout_marginTop="8dip" android:background="@drawable/button_bg_selector"
			android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="100dip"></Button>
		<Button android:text="@string/next_step" android:id="@+id/nextstep_to_step_two_bt"
			android:singleLine="true" android:paddingTop="5dip"
			android:layout_marginLeft="20dip" android:paddingBottom="5dip"
			android:textColor="@color/white" android:layout_marginTop="8dip"
			android:background="@drawable/button_bg_selector"
			android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="100dip"></Button>
	</LinearLayout>
</LinearLayout>
