<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"

	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:background="#6CBD45" android:layout_height="40dip">
		<TextView android:id="@+id/function_title_tv"
			android:gravity="center" android:textColor="@color/white"
			android:textSize="18dip" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:text="@string/installed_icon_desp_menu"/>
	</LinearLayout>
	<ScrollView android:id="@+id/scroview" android:layout_width="fill_parent"
		android:isScrollContainer="true" android:layout_height="fill_parent"
		android:fillViewport="true" android:background="@color/linear_focuse"
		android:padding="5dp">
		<LinearLayout android:layout_width="match_parent"
			android:orientation="vertical"
			android:background="@color/white" android:paddingLeft="5dp"
			android:paddingRight="5dp" android:layout_height="wrap_content">
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="10dp">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:gravity="center_vertical">
					<ImageView android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:src="@drawable/privacy_icon"></ImageView>
					<TextView android:layout_marginLeft="8dp"
						android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/security_audit_privacy" android:textSize="18sp"></TextView>
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginTop="10dp">
					<TextView android:gravity="center_vertical"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						android:textColor="@color/black" android:text="@string/installed_icon_desp_privacy" android:textSize="14sp"></TextView>
				</LinearLayout>
			</LinearLayout>
			<View android:layout_width="match_parent" android:background="@drawable/virus_scan_line01"
				android:layout_height="1dp" android:layout_marginTop="8dip"></View>
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="10dp">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:gravity="center_vertical">
					<ImageView android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:src="@drawable/cost_icon"></ImageView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_marginLeft="8dp"
						android:textColor="@color/black" android:text="@string/security_audit_cost" android:textSize="18sp"></TextView>
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginTop="10dp">
					<TextView android:gravity="center_vertical"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						android:textColor="@color/black" android:text="@string/installed_icon_desp_charge" android:textSize="14sp"></TextView>
				</LinearLayout>
			</LinearLayout>
			<View android:layout_width="match_parent" android:background="@drawable/virus_scan_line01"
				android:layout_height="1dp" android:layout_marginTop="8dip"></View>
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="10dp">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:gravity="center_vertical">
					<ImageView android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:src="@drawable/gps_icon"></ImageView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_marginLeft="8dp"
						android:textColor="@color/black" android:text="@string/security_audit_gps" android:textSize="18sp"></TextView>
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginTop="10dp">
					<TextView android:gravity="center_vertical"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						android:textColor="@color/black" android:text="@string/installed_icon_desp_gps" android:textSize="14sp"></TextView>
				</LinearLayout>
			</LinearLayout>
			<View android:layout_width="match_parent" android:background="@drawable/virus_scan_line01"
				android:layout_height="1dp" android:layout_marginTop="8dip"></View>
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="10dp">
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:gravity="center_vertical">
					<ImageView android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:src="@drawable/network_icon"></ImageView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_marginLeft="8dp"
						android:textColor="@color/black" android:text="@string/security_audit_network" android:textSize="18sp"></TextView>
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="match_parent" android:layout_marginTop="10dp">
					<TextView android:gravity="center_vertical"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						android:textColor="@color/black" android:text="@string/installed_icon_desp_network" android:textSize="14sp"></TextView>
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
